Clean up logging

--- a/site/src/pages/[lang]/tutorials/[...path].astro
+++ b/site/src/pages/[lang]/tutorials/[...path].astro
@@ -155,7 +155,7 @@ if (!isNaN(task)) {
   toc = buildTOC(tutorial.tasks[task].body);
 }
 
-console.log(toc);
+// console.log(toc);
 
 // const toc = buildTOC(doc.body);
 
