--- a/site/src/pages/preview.astro
+++ b/site/src/pages/preview.astro
@@ -59,6 +59,8 @@ if (item._type === 'tutorial') {
   // console.log(microcopy);
   pages = buildPages({ [item._lang]: microcopy })(item).map((p) => p.props);
 }
+
+console.log('Generating preview');
 ---
 
 {
@@ -73,9 +75,9 @@ if (item._type === 'tutorial') {
 
 {
   item._type === 'tutorial' && pages.length > 0 && (
-    <div class="holder">
+    <div class='holder'>
       {pages.map((p) => (
-        <div class="page">
+        <div class='page'>
           <Tutorial
             tutorial={item}
             microcopy={microcopy}
@@ -92,7 +94,7 @@ if (item._type === 'tutorial') {
 
 <!-- <p class='url'>https://chromeos.dev{item._path}</p> -->
 
-<style lang="scss">
+<style lang='scss'>
   .holder {
     --first: var(--red-500);
     --second: var(--yellow-100);
