--- a/site/src/pages/preview.astro
+++ b/site/src/pages/preview.astro
@@ -75,9 +75,9 @@ console.log('Generating preview');
 
 {
   item._type === 'tutorial' && pages.length > 0 && (
-    <div class='holder'>
+    <div class="holder">
       {pages.map((p) => (
-        <div class='page'>
+        <div class="page">
           <Tutorial
             tutorial={item}
             microcopy={microcopy}
@@ -94,7 +94,7 @@ console.log('Generating preview');
 
 <!-- <p class='url'>https://chromeos.dev{item._path}</p> -->
 
-<style lang='scss'>
+<style lang="scss">
   .holder {
     --first: var(--red-500);
     --second: var(--yellow-100);
