Swap Prism for Shiki
Prism has given us so many problems in this codebase, and is now blocking Preview because of its weird global handling. Swapping to Shiki. Eventually should add our own theme

--- a/site/src/components/portable-text/DynamicBody.astro
+++ b/site/src/components/portable-text/DynamicBody.astro
@@ -6,7 +6,7 @@ import Picture from './Picture.svelte';
 import Stats from '$components/Stats.svelte';
 import Figure from './Figure.svelte';
 import Link from './Link.svelte';
-import Code from './Code.svelte';
+import Code from './Code.astro';
 import YouTube from '$components/YouTube.svelte';
 import Quote from './Quote.svelte';
 import Table from './Table.astro';
