--- a/site/src/sass/components/_pre.scss
+++ b/site/src/sass/components/_pre.scss
@@ -45,67 +45,67 @@ pre {
   }
 }
 
-.token.prolog,
-.token.doctype,
-.token.cdata,
-.token.punctuation {
-  color: map-get($google-colors, 'grey-50');
-}
+// .token.prolog,
+// .token.doctype,
+// .token.cdata,
+// .token.punctuation {
+//   color: map-get($google-colors, 'grey-50');
+// }
 
-.token.comment {
-  color: map-get($google-colors, 'grey-500');
-}
+// .token.comment {
+//   color: map-get($google-colors, 'grey-500');
+// }
 
-.token.tag,
-.token.constant,
-.token.symbol,
-.token.deleted,
-.token.keyword,
-.token.important {
-  color: map-get($google-colors, 'cyan-400');
-}
+// .token.tag,
+// .token.constant,
+// .token.symbol,
+// .token.deleted,
+// .token.keyword,
+// .token.important {
+//   color: map-get($google-colors, 'cyan-400');
+// }
 
-.token.boolean,
-.token.number {
-  color: map-get($google-colors, 'green-300');
-}
+// .token.boolean,
+// .token.number {
+//   color: map-get($google-colors, 'green-300');
+// }
 
-.token.selector,
-.token.attr-name,
-.token.char,
-.token.builtin,
-.token.inserted,
-.token.function {
-  color: map-get($google-colors, 'purple-200');
-}
+// .token.selector,
+// .token.attr-name,
+// .token.char,
+// .token.builtin,
+// .token.inserted,
+// .token.function {
+//   color: map-get($google-colors, 'purple-200');
+// }
 
-.token.atrule,
-.token.string,
-.token.attr-value {
-  color: map-get($google-colors, 'yellow-200');
-}
+// .token.atrule,
+// .token.string,
+// .token.attr-value {
+//   color: map-get($google-colors, 'yellow-200');
+// }
 
-.token.operator,
-.token.entity,
-.token.url,
-.language-css .token.string,
-.style .token.string,
-.token.variable {
-  color: map-get($google-colors, 'pink-500');
-}
+// .token.operator,
+// .token.entity,
+// .token.url,
+// .language-css .token.string,
+// .style .token.string,
+// .token.variable {
+//   color: map-get($google-colors, 'pink-500');
+// }
 
-.token.property {
-  color: map-get($google-colors, 'cyan-400');
-}
+// .token.property {
+//   color: map-get($google-colors, 'cyan-400');
+// }
 
-.token.regex {
-  color: map-get($google-colors, 'orange-300');
-}
+// .token.regex {
+//   color: map-get($google-colors, 'orange-300');
+// }
 
-.token.italic {
-  font-style: italic;
-}
+// .token.italic {
+//   font-style: italic;
+// }
 
-.token.entity {
-  cursor: help;
-}
+// .token.entity {
+//   cursor: help;
+// }
