🆕 Add Tutorial content type and CMS content preview (#768)
* Add DB migration script

* Add development dataset switch

Lets site run off of development database instead of production, allowing for pre-production testing of CMS-tied changes

* Add I/O 2024 theme

There's a lot going on here so we can reuse official assets; I don't know if I like it or not, but we'll see how it goes

* Improve borders, especially on the home page

* Add archive build and serve options

* Remove unused codepaths from Sanity

* WIP Tutorial content type

* Updated Tutorial schema

* Add tutorial microcopy

* Simplify tutorial content type

* Add back and forward direction to generic CTAs

* Add Software component

* Update CTA styling if icons are present

* Tutorial query and types

* Adapt doc layout to include generic content area, not just type content area

* Add tutorial templates

* Clean up logging

* Fix CLI build

* Fix Code filename

If it's shell with no filename, don't include label. Fix spacing

* Make cursor pointer for reinforcement

* Fix canvas taking over page on load by only triggering if visible

* Only include file download/link if on intro

* Fix prerequisite rendering

* Remove unneeded log

* Remove broken ESLint rule

* Make some Sanity queries reusable, for previews

* Add views path to TSConfig

* Add dark mode outline

* Export TOC title

* Fix dark mode color

* Migrate preview-able content to Views

* Add Preview route

* Update Preview view to support final implementation

* Include sanity API info for preview

* Update for sharing overrides

* Add preview generation log

* Remove recommended

Think this may be breaking preview URL

* Add Preview Key to env vars

* Fix linting

* Move slugify to proper dependency

* More dependnecies moving up

* Swap Prism for Shiki

Prism has given us so many problems in this codebase, and is now blocking Preview because of its 

--- a/site/src/sass/components/_typography.scss
+++ b/site/src/sass/components/_typography.scss
@@ -139,7 +139,7 @@ $section-block-margin: 3.75rem;
   *
     + *:not(:empty):not(.header-anchor--wrapper):not(dd):not(.stat):not(td):not(
       dl div
-    ):not(dl),
+    ):not(dl):not(figcaption + pre),
   * + astro-island > *:not(:empty) {
     margin-top: 1em;
   }
@@ -161,7 +161,7 @@ $section-block-margin: 3.75rem;
     }
   }
 
-  code:not([class]) {
+  :not(.shiki) > code {
     @extend %type--code;
 
     [data-theme='dark'] & {
