--- a/site/src/layouts/doc.astro
+++ b/site/src/layouts/doc.astro
@@ -1,8 +1,6 @@
 ---
 import type { Locale } from '$types/content';
 import Wrapper from '$layouts/wrapper.astro';
-import Recommended from '$components/Recommended.svelte';
-import { getMicrocopy } from '$$microcopy';
 
 export interface Props {
   title: string;
@@ -16,7 +14,6 @@ export interface Props {
 }
 
 const { title, props = [], locale, metadesc, section } = Astro.props;
-const microcopy = getMicrocopy(locale.code);
 ---
 
 <Wrapper title={title} metadesc={metadesc} locale={locale} props={props}>
@@ -31,17 +28,21 @@ const microcopy = getMicrocopy(locale.code);
     <aside class="article--extras">
       <slot name="extras" />
     </aside>
-    <section class="article--content type" id="article">
-      <slot name="content" />
-    </section>
+    {
+      Astro.slots.has('content') && (
+        <section class="article--content type" id="article">
+          <slot name="content" />
+        </section>
+      )
+    }
+    {
+      Astro.slots.has('body') && (
+        <section class="article--content" id="article">
+          <slot name="body" />
+        </section>
+      )
+    }
   </article>
-
-  <Recommended
-    title={title}
-    language={locale.code}
-    url={Astro.url.pathname}
-    header={microcopy.identifiers.recommended}
-  />
 </Wrapper>
 
 <style lang="scss">
@@ -89,10 +90,18 @@ const microcopy = getMicrocopy(locale.code);
 
     &--extras {
       margin-block-end: 2.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      // align-items: center;
+      // justify-content: center;
+
       @include mq($bkpt-article--3-cols) {
         padding-inline: 0;
         grid-column: 4;
         grid-row: 1 / span 2;
+        margin-block-start: 2rem;
+
         // margin-block-end: 0;
       }
     }
