--- a/site/src/layouts/views/Tutorial.astro
+++ b/site/src/layouts/views/Tutorial.astro
@@ -104,6 +104,8 @@ if (!isNaN(task)) {
 
 // console.log(tutorial.tasks[task]);
 
+console.log(outro);
+
 let title;
 let eyebrow;
 if (intro) {
@@ -203,16 +205,28 @@ if (intro) {
               client:only="svelte"
             />
             <ul class="reinforcements">
-              {tutorial.outro.next.steps.map((g, i) => (
-                <Reinforcement
-                  tutorial={slugify(tutorial.title)}
-                  task={slugify(tutorial.tasks[task].title)}
-                  step={i}
-                  client:load
-                >
-                  <Text body={g} inline={true} wrapped={false} />
-                </Reinforcement>
-              ))}
+              {tutorial?.tasks[task]?.reinforcement &&
+                tutorial?.tasks[task]?.reinforcement.map((g, i) => (
+                  <Reinforcement
+                    tutorial={slugify(tutorial.title)}
+                    task={slugify(tutorial.tasks[task].title)}
+                    step={i}
+                    client:load
+                  >
+                    <Text body={g} inline={true} wrapped={false} />
+                  </Reinforcement>
+                ))}
+              {outro &&
+                tutorial.outro.next.steps.map((g, i) => (
+                  <Reinforcement
+                    tutorial={slugify(tutorial.title)}
+                    task={slugify(tutorial.tasks[task].title)}
+                    step={i}
+                    client:load
+                  >
+                    <Text body={g} inline={true} wrapped={false} />
+                  </Reinforcement>
+                ))}
             </ul>
           </section>
         </>
@@ -397,6 +411,7 @@ if (intro) {
     display: flex;
     flex-direction: column;
     gap: 2rem;
+    overflow-x: hidden;
   }
 
   .pagination {
