--- a/site/src/layouts/views/Tutorial.astro
+++ b/site/src/layouts/views/Tutorial.astro
@@ -104,8 +104,6 @@ if (!isNaN(task)) {
 
 // console.log(tutorial.tasks[task]);
 
-console.log(outro);
-
 let title;
 let eyebrow;
 if (intro) {
@@ -411,7 +409,7 @@ if (intro) {
     display: flex;
     flex-direction: column;
     gap: 2rem;
-    overflow-x: hidden;
+    overflow-x: clip;
   }
 
   .pagination {
